// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`locations.ts _fetchLocations() should fetch data with mock api 1`] = `
Array [
  Object {
    "latitude": 55.75583,
    "longitude": 37.61778,
    "name": "Moscow",
    "query": "moscow",
  },
  Object {
    "latitude": 40.7648,
    "longitude": -73.9808,
    "name": "New York",
    "query": "new york",
  },
  Object {
    "latitude": 40.0115,
    "longitude": -75.1327,
    "name": "Philadelphia",
    "query": "philadelphia",
  },
  Object {
    "latitude": 59.95,
    "longitude": 30.31667,
    "name": "Saint Petersburg",
    "query": "saint petersburg",
  },
]
`;

exports[`locations.ts _formatFinalResult() should propertly format results 1`] = `
Array [
  Object {
    "distance": "635.70 km",
    "from": Object {
      "latitude": 55.75583,
      "longitude": 37.61778,
      "name": "Moscow",
      "query": "moscow",
    },
    "to": Object {
      "latitude": 59.95,
      "longitude": 30.31667,
      "name": "Saint Petersburg",
      "query": "saint petersburg",
    },
  },
  Object {
    "distance": "128.73 km",
    "from": Object {
      "latitude": 40.7648,
      "longitude": -73.9808,
      "name": "New York",
      "query": "new york",
    },
    "to": Object {
      "latitude": 40.0115,
      "longitude": -75.1327,
      "name": "Philadelphia",
      "query": "philadelphia",
    },
  },
  Object {
    "distance": "128.73 km",
    "from": Object {
      "latitude": 40.0115,
      "longitude": -75.1327,
      "name": "Philadelphia",
      "query": "philadelphia",
    },
    "to": Object {
      "latitude": 40.7648,
      "longitude": -73.9808,
      "name": "New York",
      "query": "new york",
    },
  },
  Object {
    "distance": "635.70 km",
    "from": Object {
      "latitude": 59.95,
      "longitude": 30.31667,
      "name": "Saint Petersburg",
      "query": "saint petersburg",
    },
    "to": Object {
      "latitude": 55.75583,
      "longitude": 37.61778,
      "name": "Moscow",
      "query": "moscow",
    },
  },
]
`;

exports[`locations.ts _getClosestLocationPairsWithDistances() should find closest pair for each location 1`] = `
Array [
  Object {
    "distance": 635700,
    "pair": Array [
      Object {
        "latitude": 55.75583,
        "longitude": 37.61778,
        "name": "Moscow",
        "query": "moscow",
      },
      Object {
        "latitude": 59.95,
        "longitude": 30.31667,
        "name": "Saint Petersburg",
        "query": "saint petersburg",
      },
    ],
  },
  Object {
    "distance": 128727,
    "pair": Array [
      Object {
        "latitude": 40.7648,
        "longitude": -73.9808,
        "name": "New York",
        "query": "new york",
      },
      Object {
        "latitude": 40.0115,
        "longitude": -75.1327,
        "name": "Philadelphia",
        "query": "philadelphia",
      },
    ],
  },
  Object {
    "distance": 128727,
    "pair": Array [
      Object {
        "latitude": 40.7648,
        "longitude": -73.9808,
        "name": "New York",
        "query": "new york",
      },
      Object {
        "latitude": 40.0115,
        "longitude": -75.1327,
        "name": "Philadelphia",
        "query": "philadelphia",
      },
    ],
  },
  Object {
    "distance": 635700,
    "pair": Array [
      Object {
        "latitude": 55.75583,
        "longitude": 37.61778,
        "name": "Moscow",
        "query": "moscow",
      },
      Object {
        "latitude": 59.95,
        "longitude": 30.31667,
        "name": "Saint Petersburg",
        "query": "saint petersburg",
      },
    ],
  },
]
`;

exports[`locations.ts _getLocationPairsWithDistances() add distance for each location pair 1`] = `
Array [
  Object {
    "distance": 7512724,
    "pair": Array [
      Object {
        "latitude": 55.75583,
        "longitude": 37.61778,
        "name": "Moscow",
        "query": "moscow",
      },
      Object {
        "latitude": 40.7648,
        "longitude": -73.9808,
        "name": "New York",
        "query": "new york",
      },
    ],
  },
  Object {
    "distance": 7636967,
    "pair": Array [
      Object {
        "latitude": 55.75583,
        "longitude": 37.61778,
        "name": "Moscow",
        "query": "moscow",
      },
      Object {
        "latitude": 40.0115,
        "longitude": -75.1327,
        "name": "Philadelphia",
        "query": "philadelphia",
      },
    ],
  },
  Object {
    "distance": 635700,
    "pair": Array [
      Object {
        "latitude": 55.75583,
        "longitude": 37.61778,
        "name": "Moscow",
        "query": "moscow",
      },
      Object {
        "latitude": 59.95,
        "longitude": 30.31667,
        "name": "Saint Petersburg",
        "query": "saint petersburg",
      },
    ],
  },
  Object {
    "distance": 128727,
    "pair": Array [
      Object {
        "latitude": 40.7648,
        "longitude": -73.9808,
        "name": "New York",
        "query": "new york",
      },
      Object {
        "latitude": 40.0115,
        "longitude": -75.1327,
        "name": "Philadelphia",
        "query": "philadelphia",
      },
    ],
  },
  Object {
    "distance": 6886947,
    "pair": Array [
      Object {
        "latitude": 40.7648,
        "longitude": -73.9808,
        "name": "New York",
        "query": "new york",
      },
      Object {
        "latitude": 59.95,
        "longitude": 30.31667,
        "name": "Saint Petersburg",
        "query": "saint petersburg",
      },
    ],
  },
  Object {
    "distance": 7010527,
    "pair": Array [
      Object {
        "latitude": 40.0115,
        "longitude": -75.1327,
        "name": "Philadelphia",
        "query": "philadelphia",
      },
      Object {
        "latitude": 59.95,
        "longitude": 30.31667,
        "name": "Saint Petersburg",
        "query": "saint petersburg",
      },
    ],
  },
]
`;

exports[`locations.ts _parseRawLocationQueries() should propertly parse raw data 1`] = `
Array [
  "moscow",
  "new york",
  "nowhere",
  "philadelphia",
  "saint petersburg",
]
`;

exports[`locations.ts calculateResponse() should propertly transform raw locations queries to final result 1`] = `
Array [
  Object {
    "distance": "635.70 km",
    "from": Object {
      "latitude": 55.75583,
      "longitude": 37.61778,
      "name": "Moscow",
      "query": "moscow",
    },
    "to": Object {
      "latitude": 59.95,
      "longitude": 30.31667,
      "name": "Saint Petersburg",
      "query": "saint petersburg",
    },
  },
  Object {
    "distance": "128.73 km",
    "from": Object {
      "latitude": 40.7648,
      "longitude": -73.9808,
      "name": "New York",
      "query": "new york",
    },
    "to": Object {
      "latitude": 40.0115,
      "longitude": -75.1327,
      "name": "Philadelphia",
      "query": "philadelphia",
    },
  },
  Object {
    "distance": "128.73 km",
    "from": Object {
      "latitude": 40.0115,
      "longitude": -75.1327,
      "name": "Philadelphia",
      "query": "philadelphia",
    },
    "to": Object {
      "latitude": 40.7648,
      "longitude": -73.9808,
      "name": "New York",
      "query": "new york",
    },
  },
  Object {
    "distance": "635.70 km",
    "from": Object {
      "latitude": 59.95,
      "longitude": 30.31667,
      "name": "Saint Petersburg",
      "query": "saint petersburg",
    },
    "to": Object {
      "latitude": 55.75583,
      "longitude": 37.61778,
      "name": "Moscow",
      "query": "moscow",
    },
  },
]
`;
